test: handle IDE warnings